--- a/Appointment form.html
+++ b/Appointment form.html
@@ -166,20 +166,18 @@
 								</div>	
 						<div class="form-group">
 
-							<input type="radio" value="Agree" checked="checked" name="call_request" id="agree">
-							<label class="radio-container m-r-45">By providing the above information you agree to be contacted by us for fixing appointments and for the purpose of Counselling.
- 
-							</label>
+							<input type="checkbox" name="call_request" value="Agree" id="agree">
+<label > By providing the above information you agree to be contacted by us for fixing appointments and for the purpose of Counselling.</label>
 
 						</div>
-						<div class="form-group">
+						<!-- <div class="form-group">
 
 							<input type="radio" value="Disgree" name="call_request" id="disgree">
 							<label class="radio-container">I Disagree to contact me 
 							</label>
-						</div>						
+						</div>			 -->			
 						<br>
-						<button class="btn" >
+						<button class="btn"  >
 						Send Message</button>
 					</div>
 
@@ -188,9 +186,9 @@
 						<h2>Thanks for contacting us!
 						We will get back to you soon!</h2>
 					</div>
-					<input type="reset" value="reset" name="">
 
-				</form>
+					</form>
+
 
 				<!-- END -->
 				<!---->
