--- a/Learn to Unlearn and Unleash your.html
+++ b/Learn to Unlearn and Unleash your.html
@@ -94,11 +94,13 @@ Potential</a>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Detail Page</h2>
+                        <h2>Learn to Unlearn and Unleash your
+
+Potential</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Detail Page</a>
+                        <!-- <a href="">Home</a>
+                        <a href="">Detail Page</a> -->
                     </div>
                 </div>
             </div>
@@ -146,70 +148,70 @@ information that is to unlearn or forget unwanted information from our memory an
 new information.</p>
 <p>
 Welcome to the 21st century. Living in our time requires different skills, one of the most
-important of which is unlearning activities, skills such that new learning can take place.
+important of which is unlearning activities, skills such that new learning can take place.</p>
+<p>
 <b>As futurist Alvin Toffler once wrote, “The illiterate of the 21st century
 will not be those who cannot read and write, but those who cannot learn,
 unlearn and relearn.”</b>
 </p>
 <p>
-Learning and unlearning are required to unleash your potential!
+Learning and unlearning are required to unleash your potential!<br>
 A close introspection will help us know whether we are interested in unlearning what we have
 learned. Unlearning makes us literate, educated, and wise. Unfortunately, the topic “unlearning”
 has not been much discussed in academia and the need for it is not emphasized in our
 educational institutions.
                             </p>
                             <p>
-                                Babies, toddlers, and pre-schoolers learn
-best by imitation and gentle repetition.
-Hundreds of repetitions in a safe,
-supportive environment with people they
-love and trust. When you read, talk, and
-play with a purpose with children
-beginning at birth, you help shape their
-networks of neurons. By routinely doing
-regular things the neurons form a
-pathway, thus habit formation is
-developed and we tend to do those
+                                What do we do now, when we
+need to learn a new habit and
+unlearn an old habit at the
+same time?<br>
+Let’s say you habitually
+follow a routine in the
+morning. First, you brush
+your teeth, then head to the
+kitchen to desperately seek
+out caffeine, then … well, you
+get the idea. Eventually, you
+head off to work where you
+have another routine, most of
+which you perform unconsciously.<br>
+What if you wanted to shift one, two, or three aspects of your routine? You would need to shift
+the ingrained patterns of behaviour as you have no choice but to learn something new!
 
-activities unconsciously.
 </p>
 <p>
-We need to keep on updating ourselves and keep on learning to keep our memory in working
-condition. It is an exercise to keep our brain cells active. Here we talk about active learning
-where we store the information in our brain for long term memory. Hence to store more
-information, we need to clean up some space as we do in our gadgets, deleting unnecessary
-information that is to unlearn or forget unwanted information from our memory and try to upload
-new information.
-Welcome to the 21st century. Living in our time requires different skills, one of the most
-important of which is unlearning activities, skills such that new learning can take place.
-As futurist Alvin Toffler once wrote, “The illiterate of the 21st century
-will not be those who cannot read and write, but those who cannot learn,
-unlearn and relearn.”
+So How Do You Unlearn Something?<br>
+By definition, habits are something you do automatically, without thinking. They are performed,
+for the most part, unconsciously. Habitual behaviors usually occur in chains of activities. This
+means that some initial stimulus sets them off, and then a sequence of events occurs. You either
+don&#39;t notice it is happening or it plays with your mind, so you don&#39;t care. What you have to
+accomplish, as quickly as possible, is to make the old habit or action extinct. Well, there exists a
+robust theory of extinction that essentially says you need to make an action extinct before you
+can learn something new.
+
 </p>
-<p>
-Learning and unlearning are required to unleash your potential!
-A close introspection will help us know whether we are interested in unlearning what we have
-learned. Unlearning makes us literate, educated, and wise. Unfortunately, the topic “unlearning”
-has not been much discussed in academia and the need for it is not emphasized in our
-educational institutions.
-                            </p>
-                            <h3>The shortcut to unlearn</h3>
-                            <p>Simply “flood” or overwhelm the old action with the newly desired action or habit! With this
+ <h3>The shortcut to unlearn</h3>
+<p>Simply “flood” or overwhelm the old action with the newly desired action or habit! With this
 approach of flooding your old routine with newly designed actions, the process of new learning
-overwhelms and makes extinct the old actions you wanted to unlearn.
+overwhelms and makes extinct the old actions you wanted to unlearn.</p>
+<p>
 Rather than focus on the unlearning part, simply design the new action you would like to take its
 place. Take, for instance, replacing coffee with green tea. You simply get there faster by
-dwelling on which tea choice you make this morning. There is no focus at all on coffee.
+dwelling on which tea choice you make this morning. There is no focus at all on coffee.</p>
+<p>
 The choice of where to focus your attention and energy simply affects the speed with which you
 will grow, learn, relearn, and unlearn anything. Flood your brain with what you want, and you’ll
-get it quicker and with less effort.
+get it quicker and with less effort.</p>
+<p>
 Adult education experts estimate that up to 40% of what tertiary students are learning will be
 obsolete a decade from now when they will be working in jobs that have yet to be created.
 </p>
 <p>
 
 Indeed, the top 10 most in-demand jobs today didn’t even exist 10 years ago. To say that we live
-in a changing world understates the speed of both the pace and the scope of on-going change.
+in a changing world understates the speed of both the pace and the scope of on-going change.</p>
+<p>
 After a decade, the situation that exists now will be changed and the world will be a space for
 those who adapt themselves to the new change. Of course, it’s not just the technology that’s
 changing the world. Drastic changes in demography and longevity have experts predicting that
