--- a/Adjusting to the new normal.html
+++ b/Adjusting to the new normal.html
@@ -93,7 +93,7 @@ Potential</a>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Detail Page</h2>
+                        <h2>Adjusting to the new normal</h2>
                     </div>
                     <div class="col-12">
                         <!-- <a href="">Home</a>
