--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@ Potential</a>
         required placeholder="example@email.com"/>
       </fieldset>
         <br>
-      <button class="btn" >
+      <button type="submit" class="btn" >
         Send Message</button>
     </div>
 
