--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@ Potential</a>
 <!-- START HERE -->
 
 
-  <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
+  <form name="formu1" class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
   action="https://script.google.com/macros/s/AKfycbz74BFTi1Yo5jIJf-LoYCl72h6JoTZz43GNLBcccZosq6-V46GK0v6VqN4WEaZhm-Cn/exec">
     <!-- change the form action to your script url -->
 
@@ -173,7 +173,7 @@ Potential</a>
         required placeholder="example@email.com"/>
       </fieldset>
         <br>
-      <button type="submit" class="btn" >
+      <button onclick="submit_form();" type="submit" class="btn" >
         Send Message</button>
     </div>
 
@@ -250,5 +250,11 @@ Potential</a>
   <!-- Submit the Form to Google Using "AJAX" -->
   <script data-cfasync="false" type="text/javascript"
   src="form-submission-handler.js"></script>
+<script>
+function submit_form() {
+document.formu1.submit();
+document.formu1.reset(); 
+}
+</script>
     </body>
 </html>
