--- a/contact.html
+++ b/contact.html
@@ -178,8 +178,8 @@ Potential</a>
     </div>
 
     <!-- Thankyou Message People See when they submit the form: -->
-    <div class="thankyou_message" style="display:none;">
-      <h2>Thanks for contacting us!
+    <div id="myForm" class="thankyou_message" style="display:none;">
+      <h2 id="myForm" >Thanks for contacting us!
         We will get back to you soon!</h2>
     </div>
 
