Final Submit completed

--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@ Potential</a>
       </fieldset>
         <br>
       <input onclick="submit_form();" type="submit" class="btn" >
-        Send Message</input>
+       </input>
     </div>
 
     <!-- Thankyou Message People See when they submit the form: -->
