--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -15,7 +15,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 	<!-- CSS Libraries -->
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrapscss.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 	<link href="lib/animate/animate.min.css" rel="stylesheet">
 	<link href="lib/flaticon/font/flaticon.css" rel="stylesheet"> 
@@ -166,17 +166,16 @@
 								</div>	
 						<div class="form-group">
 
-							<input type="radio" value="Agree" checked="checked" name="call_request" id="agree">
-							<label class="radio-container m-r-45">I Agree to Call Me Using this Credentials 
-							</label>
+							<input type="checkbox" name="call_request" value="Agree" id="agree">
+<label > By providing the above information you agree to be contacted by us for fixing appointments and for the purpose of Counselling.</label>
 
 						</div>
-						<div class="form-group">
+						<!-- <div class="form-group"> -->
 
-							<input type="radio" value="Disgree" name="call_request" id="disgree">
+							<!-- <input type="radio" value="Disgree" name="call_request" id="disgree">
 							<label class="radio-container">I Disgree to Call Me Using this Credentials 
-							</label>
-						</div>						
+							</label> -->
+						<!-- </div>						 -->
 						<br>
 						<button class="btn" >
 						Send Message</button>
