--- a/Adjusting to the new normal.html
+++ b/Adjusting to the new normal.html
@@ -63,11 +63,11 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="index.html" class="nav-item nav-link ">Home</a>
                         <a href="about.html" class="nav-item nav-link ">Get to know me</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blogs</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Blogs</a>
                             <div class="dropdown-menu">
                                 <a href="Adjusting to the new normal.html" class="dropdown-item">Adjusting to the new normal</a>
                                 <a href="Learn to Unlearn and Unleash your.html" class="dropdown-item">Learn to Unlearn and Unleash your
@@ -79,7 +79,7 @@ Potential</a>
                                 </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Resources</a>
-                        <a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
+                        <a href="Appointment form.html" class="nav-item nav-link">Appointment</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
@@ -93,7 +93,7 @@ Potential</a>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Detail Page</h2>
+                        <h2>Adjusting to the new normal</h2>
                     </div>
                     <div class="col-12">
                         <!-- <a href="">Home</a>
