--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Potential</a>
                                 Counselling is The process of assisting and guiding clients, especially by a trained person on a professional basis, to resolve especially personal, social, or psychological problems and difficulties.<br>
                             </p>
                             <p> 
-                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
@@ -194,7 +194,7 @@ Potential</a>
                                Psychotherapy, or talk therapy, is a way to help people with a broad variety of mental illnesses and emotional difficulties. Psychotherapy can help eliminate or control troubling symptoms so a person can function better and can increase well-being and healing. <br><br>
                             </p>
                             <p> 
-                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -207,7 +207,7 @@ Potential</a>
                                 Hypnotherapy is the practice of using the power of suggestion to bring about positive change in clients or patients who are under hypnosis. A hypnotherapist will meet with a client before performing hypnosis and discuss medical history, ailments and goals for treatment.
                             </p>
                             <p> 
-                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
@@ -220,7 +220,7 @@ Potential</a>
                                 Marital and Pre-marital counselling is a type of therapy that helps couples prepare for marriage. Premarital counseling can help ensure that you and your partner have a strong, healthy relationship — giving you a better chance for a stable and satisfying marriage. <br>
                             </p>
                             <p> 
-                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
@@ -233,7 +233,7 @@ Potential</a>
                                 The teenage years can be challenging for both teens and their parents. Adolescents face many struggles such as peer pressure, hormonal changes, academic expectations, and parental pressure, all while trying to discover their own unique identity and find worth and significance as a person. We offer a safe place for your teen to talk through their struggles and emotions while learning how to navigate problems in a healthy way.
                             </p>
                             <p> 
-                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="1s">
@@ -244,7 +244,7 @@ Potential</a>
                             <h3>Family and Relationship counselling</h3>
                             <p>
                                 Family therapy or family counselling is a form of treatment that is designed to address specific issues affecting the health and functioning of a family. Relationship counseling, also called couples therapy is a type of psychotherapy. This type of counseling helps couples of all types to explore, recognize, and resolve conflicts in an effort to improve their relationships and interactions.<br>
-                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -255,7 +255,7 @@ Potential</a>
                             </div>
                             <h3>Grief And Loss</h3>
                             <p>Grief is a natural reaction to loss or change. Grief is most commonly discussed in relation to the death of a loved one or experienced following any major loss or change. Grieving individuals need reassurance that what they are experiencing is normal. Grief counseling is a form of psychotherapy that aims to help people cope with grief and mourning following the death of loved ones, or with major life changes that trigger feelings of grief (e.g., divorce). Counselors can help people understand and identify the ways as how to express or let go their feelings.
-                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                                <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -266,7 +266,7 @@ Potential</a>
                             </div>
                             <h3>Counselling for behavioural and emotional disorders</h3>
                             <p>Behavioral therapy is used to treat a variety of mental illnesses such as: substance abuse, aggression, anger issues, bulimia, anorexia, binge eating, generalized, social and specific phobias and anxiety. It is also used to treat medical issues such as incontinence and insomnia. Behavioral therapy techniques are often used in combination with psychotropic medications. The treatment plan is based on an individual’s comfort level and the severity of the symptoms. Your therapist also helps you identify faulty thinking patterns and change aversive behaviors.<br>
-                              <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                              <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -277,7 +277,7 @@ Potential</a>
                             </div>
                             <h3>Counselling for adjustment issues</h3>
                             <p>Adjustment disorder is characterized by emotions and behaviors associated with a stressful event that lead to difficulties in work, school, and relationships. Seen as a temporary condition usually lasting about six months, treatment is focused upon helping a person cope with the stressful situation or making a transition in a more productive manner. Psychotherapy is the choice of treatment for this disorder, with an emphasis on the event or situation, its impact upon the person's life, and how the person can move on from the effects the event had.<br><br>
-                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
