--- a/Adjusting to the new normal.html
+++ b/Adjusting to the new normal.html
@@ -374,7 +374,7 @@ help you on your journey of healing and self-discovery.
                                 <div class="form-group">
                                     <input type="submit" value="Post Comment" class="btn"> -->
                                     <p> 
-                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                                 </div>                           
                         </div>
                     </div>
