--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Potential</a>
                             <h3>Family and Relationship counselling</h3>
                             <p>
                                 Family therapy or family counselling is a form of treatment that is designed to address specific issues affecting the health and functioning of a family. Relationship counseling, also called couples therapy is a type of psychotherapy. This type of counseling helps couples of all types to explore, recognize, and resolve conflicts in an effort to improve their relationships and interactions.<br>
-                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                               <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -255,7 +255,7 @@ Potential</a>
                             </div>
                             <h3>Grief And Loss</h3>
                             <p>Grief is a natural reaction to loss or change. Grief is most commonly discussed in relation to the death of a loved one or experienced following any major loss or change. Grieving individuals need reassurance that what they are experiencing is normal. Grief counseling is a form of psychotherapy that aims to help people cope with grief and mourning following the death of loved ones, or with major life changes that trigger feelings of grief (e.g., divorce). Counselors can help people understand and identify the ways as how to express or let go their feelings.
-                                <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                                <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -266,7 +266,7 @@ Potential</a>
                             </div>
                             <h3>Counselling for behavioural and emotional disorders</h3>
                             <p>Behavioral therapy is used to treat a variety of mental illnesses such as: substance abuse, aggression, anger issues, bulimia, anorexia, binge eating, generalized, social and specific phobias and anxiety. It is also used to treat medical issues such as incontinence and insomnia. Behavioral therapy techniques are often used in combination with psychotropic medications. The treatment plan is based on an individual’s comfort level and the severity of the symptoms. Your therapist also helps you identify faulty thinking patterns and change aversive behaviors.<br>
-                              <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                              <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -277,7 +277,7 @@ Potential</a>
                             </div>
                             <h3>Counselling for adjustment issues</h3>
                             <p>Adjustment disorder is characterized by emotions and behaviors associated with a stressful event that lead to difficulties in work, school, and relationships. Seen as a temporary condition usually lasting about six months, treatment is focused upon helping a person cope with the stressful situation or making a transition in a more productive manner. Psychotherapy is the choice of treatment for this disorder, with an emphasis on the event or situation, its impact upon the person's life, and how the person can move on from the effects the event had.<br><br>
-                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                               <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
