--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Potential</a>
                                 Counselling is The process of assisting and guiding clients, especially by a trained person on a professional basis, to resolve especially personal, social, or psychological problems and difficulties.<br>
                             </p>
                             <p> 
-                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
@@ -194,7 +194,7 @@ Potential</a>
                                Psychotherapy, or talk therapy, is a way to help people with a broad variety of mental illnesses and emotional difficulties. Psychotherapy can help eliminate or control troubling symptoms so a person can function better and can increase well-being and healing. <br><br>
                             </p>
                             <p> 
-                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -207,7 +207,7 @@ Potential</a>
                                 Hypnotherapy is the practice of using the power of suggestion to bring about positive change in clients or patients who are under hypnosis. A hypnotherapist will meet with a client before performing hypnosis and discuss medical history, ailments and goals for treatment.
                             </p>
                             <p> 
-                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
@@ -220,7 +220,7 @@ Potential</a>
                                 Marital and Pre-marital counselling is a type of therapy that helps couples prepare for marriage. Premarital counseling can help ensure that you and your partner have a strong, healthy relationship — giving you a better chance for a stable and satisfying marriage. <br>
                             </p>
                             <p> 
-                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
@@ -233,7 +233,7 @@ Potential</a>
                                 The teenage years can be challenging for both teens and their parents. Adolescents face many struggles such as peer pressure, hormonal changes, academic expectations, and parental pressure, all while trying to discover their own unique identity and find worth and significance as a person. We offer a safe place for your teen to talk through their struggles and emotions while learning how to navigate problems in a healthy way.
                             </p>
                             <p> 
-                               <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                               <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="1s">
