--- a/Resources.html
+++ b/Resources.html
@@ -442,7 +442,7 @@ help you on your journey of healing and self-discovery.
                                     <input type="submit" value="Post Comment" class="btn">
                                 </div>
                             </form> -->
-                            <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                            <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                                 </div>
                         </div>
                     </div>
