--- a/Mental Health.html
+++ b/Mental Health.html
@@ -373,7 +373,7 @@ help you on your journey of healing and self-discovery.
                                 </div>
                                 <div class="form-group">
                                     <input type="submit" value="Post Comment" class="btn"> -->
-                                     <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                                     <a class="btn" href="Appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                                 </div>
                             <!-- </form> -->
                         </div>
