--- a/about.html
+++ b/about.html
@@ -144,7 +144,10 @@ emotions, feel confident at work, and create meaningful relationships with peop
 who accept and appreciate you. I can help you discover your true self potential and
 learn to accept your flaws and short comings. 
 It&#39;s from this place of self-love and acceptance that change is possible.
-    <b>You can let go of pleasing everyone else and feel good about being you!</b>
+    <b>You can let go of pleasing everyone else and feel good about being you!</b><br><br><br>
+
+
+  <b><p>UDYAM REGISTRATION NUMBER: UDYAM-MH-27-0041103</p></b>
                             </p>
                         </div>
                     </div>
