--- a/service.html
+++ b/service.html
@@ -39,11 +39,9 @@
                                 <!-- <p>Mon - Fri</p> -->
                             </div>
                             <div class="text">
-                                <i class="fa fa-phone-alt"></i>
                                 <h2>
-                                +91 96434 48705
+                                    UDYAM REGISTRATION NUMBER: UDYAM-MH-27-0041103
                                 </h2>
-                                <p>For Appointment</p>
                             </div>
 
              
