--- a/service.html
+++ b/service.html
@@ -271,10 +271,10 @@ INR 800/ session (chat message)<br>
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="http://www.timekeepers-tech.tk/">TimeKeepers.tech</a>, All Right Reserved.</p>
+                           <p>&copy; <a href="https://t-r-i-n-i-t-y.tk/">Trinithy</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
-                            <p>Designed By <a href="http://www.timekeepers-tech.tk/">Timekeepers.tech</a></p>
+                            <p>Designed By <a href="https://t-r-i-n-i-t-y.tk/">Trinity</a></p>
                         </div>
                     </div>
                 </div>
